formulario de registro de usuarios

--- a/src/main/resources/templates/formRegistro.html
+++ b/src/main/resources/templates/formRegistro.html
@@ -35,29 +35,29 @@
 						<p th:text="${error}"></p>
 					</div>
 					
-					<p class="title">Register</p>
-					<p class="message">Signup now and get full access to our app.</p>
+					<p class="title">Regístrate</p>
+					<p class="message">Regístrate ahora y obten acceso completo a nuestra aplicación.</p>
 					<div class="flex">
 						<label>
 							<input required placeholder name="name" type="text" class="input"
 								id="firstName">
-							<span>Firstname</span>
+							<span>Nombre</span>
 						</label>
 						<label>
 							<input required placeholder name="apellido" type="text" class="input"
 								id="lastName">
-							<span>Lastname</span>
+							<span>Apellido</span>
 						</label>
 					</div>
 					<label>
 						<input required placeholder name="username" type="text" class="input"
 							id="username">
-						<span>username</span>
+						<span>nombrede usuario</span>
 					</label>
 					<label>
 						<input required placeholder name="email" type="email" class="input"
 							id="email">
-						<span>Email</span>
+						<span>Correo</span>
 					</label>
 					<label>
 						<input required placeholder name="telefono" type="text" class="input"
@@ -67,16 +67,16 @@
 					<label>
 						<input required placeholder name="password" type="password" class="input"
 							id="password">
-						<span>Password</span>
+						<span>Contraseña</span>
 					</label>
 					<label>
 						<input required placeholder name="confirmPassword" type="password"
 							class="input" id="confirmPassword">
-						<span>Confirm password</span>
+						<span>Confirma contraseña</span>
 					</label>
-					<button type="submit" class="submit">Submit</button>
+					<button type="submit" class="submit">Crear</button>
 					<p class="signin">
-						Already have an account? <a href="#">Signin</a>
+						Ya tienes una cuenta? <a href="#">Inicia Sesión</a>
 					</p>
 				</form>
 
