--- a/src/main/resources/templates/formRegistro.html
+++ b/src/main/resources/templates/formRegistro.html
@@ -10,8 +10,7 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		
-		
-		<title>EmpleosApp | Formulario de registro</title>
+		<title>Formulario de registro</title>
 
 		<!-- Bootstrap CSS -->
 		<link
@@ -29,7 +28,6 @@
 
 				<form class="form" id="userForm" th:action="@{/authentication/register}"
 					method="post" autocomplete="off">
-
 
 					<div th:if="${error}" class="alert alert-danger">
 						<p th:text="${error}"></p>
