formulario se comunica con api externa de registro de usuario de face

--- a/src/main/resources/static/login/css/login.css
+++ b/src/main/resources/static/login/css/login.css
@@ -145,3 +145,17 @@ body {
     opacity: 0;
   }
 }
+
+.password-container {
+  position: relative;
+}
+
+#togglePassword {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  border: none;
+  background: none;
+  cursor: pointer;
+}
