--- a/src/main/resources/templates/formRegistro.html
+++ b/src/main/resources/templates/formRegistro.html
@@ -9,7 +9,7 @@
 		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
-		
+		<link rel="icon" th:href="@{/imgs/login/logo_face.png}">
 		<title>Formulario de registro</title>
 
 		<!-- Bootstrap CSS -->
