boton de registro activo

--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -36,8 +36,8 @@
 
 					<span><a href="#">¿Olvidaste tu contraseña?</a></span>
 					<div class="border"></div>
-					<!--<button><a th:href="@{/registro}">Crear cuenta nueva</a></button>-->
-					<button><a href="#">Crear cuenta nueva</a></button>
+				<button><a th:href="@{/registro}">Crear cuenta nueva</a></button>
+					
 				  </form>
 				  
 				<p class="create-page">
